--- a/.travis.yml
+++ b/.travis.yml
@@ -1,5 +1,12 @@
-sudo: false
 language: ruby
+dist: trusty
+sudo: required
+cache: bundler
+bundler_args: --without console
+script:
+  - bundle exec rake spec
 rvm:
-  - 2.3.0
-before_install: gem install bundler -v 1.12.5
+  - 2.3.8
+  - 2.4.5
+  - 2.5.3
+  - 2.6.1
