change gem version; add chrom as addon for travis-ci

--- a/.travis.yml
+++ b/.travis.yml
@@ -5,6 +5,8 @@ cache: bundler
 bundler_args: --without console
 script:
   - bundle exec rake spec
+addons:
+  chrome: stable
 rvm:
   - 2.3.8
   - 2.4.5
